# Fantasy-80-s-computer

./: .gitignore  Cargo.toml  README.md
3D Model/: SuperSlicer_config_bundle.ini  case-bottom.0.3mf  case-top.0.3mf  screen frame-Body-model.3mf  screen frame-Body-project.3mf  screen frame-Body002-model.3mf  screen frame-Body002-project.3mf  screen frame-mounting-plate.gcode  screen frame-screen back - short.3mf  screen frame-screen frame.3mf  screen frame.FCStd  screen frame.FCStd1
3D Model/v1/: case-bottom.0.stl  screen frame-mounting-plate-project.3mf  screen frame-mounting-plate.3mf  screen frame-screen back - short.3mf  screen frame-screen back.3mf
3D Model/v2/: Fantasy CPC assembly.FCStd  Fantasy CPC assembly.FCStd1  LCD controler holder.FCStd  LCD controler holder.FCStd1  LCD controler spacer.FCStd  LCD controler spacer.FCStd1  M3 hole test.FCStd  M3 hole test.FCStd1  case_bottom.3mf  computer case extended top cover.FCStd  computer case extended top cover.FCStd1  computer case extended-Body.stl  computer case top.FCStd  computer case top.FCStd1  computer case-Body.stl  computer case.FCStd  computer case.FCStd1  controler holder.3mf  double height extension slot.FCStd  double height extension slot.FCStd1  monitor back alt-Body.3mf  monitor back alt.FCStd  monitor back alt.FCStd1  monitor back-Body.3mf  monitor back.FCStd  monitor back.FCStd1  monitor frame.FCStd  monitor frame.FCStd1  monitor side.FCStd  monitor side.FCStd1  monitor sides.3mf  monitor_face.3mf  single height extension slot.FCStd
app_macro/: Cargo.toml
app_macro/app_macro_derive/: Cargo.toml
app_macro/app_macro_derive/src/: lib.rs
app_macro/src/: lib.rs
clock/src/: lib.rs
display_controller/: Cargo.toml
display_controller/src/: color_palettes.rs  config.rs  console.rs  crt_renderer.rs  lib.rs  renderer.rs  sprite.rs  text_layer.rs
f8b_app_macro/: Cargo.toml
f8b_app_macro/f8b_app_macro_derive/: Cargo.toml
f8b_app_macro/src/: lib.rs
fantasy_cpc_app/: Cargo.toml
fantasy_cpc_app/src/: lib.rs
fantasy_cpc_app_trait/: Cargo.toml
fantasy_cpc_app_trait/src/: lib.rs
fantasy_cpc_clock/: Cargo.toml
fantasy_cpc_clock/src/: lib.rs
fantasy_cpc_display_controller/: Cargo.toml
fantasy_cpc_display_controller/src/: color_palettes.rs  config.rs  default_character_rom.rs  lib.rs  sprite.rs  text_layer.rs
fantasy_cpc_display_controller/src/shapes_2d/: circle.rs  line.rs
fantasy_cpc_display_controller/src/sprite_layer/: renderer.rs
fantasy_cpc_display_controller/src/text_layer/: character_rom_trait.rs  default_character_rom.rs  mod.rs  random_garbage.rs  renderer.rs  text_layer.rs
resources/sprites/: smiley.txt  sprite1.txt
shaders/: crt_shader.wgsl
src/: app.rs  application.rs  characters_rom.rs  cli.rs  color_palettes.rs  config.rs  console.rs  crt_shader_renderer.rs  lines.rs  main.rs  process.rs  shader_crt_upscaler_renderer.rs  shader_variables.rs  shell.rs  sprite.rs  sprite_editor.rs  text_edit.rs  text_layer.rs  unicode.rs  virtual_frame_buffer.rs  virtual_text_mode.rs  windows_project.code-workspace
src/apps/: boot.rs  console.rs  empty_example.rs  life.rs  lines.rs  mandelbrot.rs  mod.rs  shell.rs  sprite_editor.rs  squares.rs  test.rs  text_edit.rs  weather.rs  weather_app.rs
src/sound/: mod.rs  notes.rs  play.rs  silence.rs  square.rs
tools/charactereditor/: index.html  script.js
tools/spriteeditor/: index.html  script.js
unicode/src/: lib.rs
virtual_frame_buffer/: Cargo.toml
virtual_frame_buffer/src/: characters_rom.rs  (+8 more)
(+19 files in other folders)
