[package]
name = "fantasy_cpc"
version = "0.3.0"
edition = "2021"
authors = ["Damien Torreilles <damien.torreilles@gmail.com>"]

[dependencies]
chrono = "0.4.24"
rand = "0.8.5"
winit = "0.28.3"
winit_input_helper = "0.14.1"
pixels = "0.12.1"
bytemuck = "1.12"
ultraviolet = "0.9"
openweathermap = "0.2.4"
cpal = "0.15.2"
rodio = "0.17.1"
anyhow = "1.0.70"
app_macro = { path = "./app_macro" }
app_macro_derive = { path = "./app_macro/app_macro_derive" }
display_controller = { path = "./display_controller" }
unicode = { path = "./unicode" }
clock = { path = "./clock" }
fast-math = "0.1.1"