[package]
name = "fantasy_cpc"
version = "0.4.0"
edition = "2021"
authors = ["Damien Torreilles <damien.torreilles@gmail.com>"]

[dependencies]
app_macro = { path = "./app_macro" }
app_macro_derive = { path = "./app_macro/app_macro_derive" }
display_controller = { path = "./display_controller" }
unicode = { path = "./unicode" }
clock = { path = "./clock" }
chrono = "0.4.31"
rand = "0.8.5"
winit = "0.28.7"
winit_input_helper = "0.14.1"
pixels = "0.13.0"
bytemuck = "1.14.0"
ultraviolet = "0.9.2"
openweathermap = "0.2.4"
cpal = "0.15.2"
rodio = "0.17.1"
anyhow = "1.0.75"
fast-math = "0.1.1"
cargo-watch = "8.4.1"
