[package]
name = "fantasy_cpc"
version = "0.6.1"
edition = "2021"
authors = ["Damien Torreilles <damien.torreilles@gmail.com>"]

[dependencies]
fantasy_cpc_display_controller = { path = "./fantasy_cpc_display_controller" }
fantasy_cpc_clock = { path = "./fantasy_cpc_clock" }
fantasy_cpc_app = { path = "./fantasy_cpc_app"}
unicode = { path = "./unicode" }
chrono = "0.4.38"
rand = "0.8.5"
winit = "0.28.7"
winit_input_helper = "0.14.1"
pixels = "0.13.0"
bytemuck = "1.18.0"
ultraviolet = "0.9.2"
openweathermap = "0.2.4"
cpal = "0.15.2"
rodio = "0.19.0"
anyhow = "1.0.89"
fast-math = "0.1.1"
cargo-watch = "8.5.2"
