[package]
name = "app_macro"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.28.3"
winit_input_helper = "0.14.1"
display_controller = { path = "../display_controller" }
clock = { path = "../clock" }