[package]
name = "fantasy_cpc_app_trait"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.28.3"
winit_input_helper = "0.14.1"
display_controller = { path = "../display_controller" }
unicode = { path = "../unicode" }
clock = { path = "../clock" }