[package]
name = "fantasy_cpc_app_trait"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.28.3"
winit_input_helper = "0.14.1"
fantasy_cpc_display_controller = { path = "../fantasy_cpc_display_controller" }
fantasy_cpc_clock = { path = "../fantasy_cpc_clock" }
unicode = { path = "../unicode" }