[package]
name = "fantasy_cpc_display_controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
unicode = { path = "../unicode" }
fantasy_cpc_clock = { path = "../fantasy_cpc_clock" }